<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="site"
            type="br.com.spm.viewmodel.RegisterSiteViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/relative_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="@{() -> site.onBack()}"
                android:padding="@dimen/default_margin"
                app:srcCompat="@drawable/ic_back"
                android:contentDescription="@string/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/bt_back"
                android:paddingBottom="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin"
                android:singleLine="true"
                android:text="@string/register_site_toolbar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/toolbar_size"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_toolbar"
            android:orientation="vertical"
            android:layout_above="@+id/button_register_site"
            android:gravity="center"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/register_site_hint_site"
                    android:inputType="textUri"
                    android:maxLength="50"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_register_site"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:onClick="@{() -> site.onRegister()}"
            android:text="@string/register_site_bt_register"/>

    </RelativeLayout>

</layout>