<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white">

    <data>

        <import type="br.com.zup.multistatelayout.MultiStateLayout"/>

        <variable
            name="login"
            type="br.com.spm.viewmodel.LoginViewModel"/>
    </data>

    <br.com.zup.multistatelayout.MultiStateLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:msl_loadingLayout="@layout/ms_loading_view"
        app:msl_state="@{login.showLoading ? MultiStateLayout.State.LOADING : MultiStateLayout.State.CONTENT}">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/text_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="32sp"/>

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/text_top"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_margin"
                    android:paddingLeft="@dimen/default_margin"
                    android:paddingRight="@dimen/default_margin"
                    android:paddingTop="@dimen/login_margintop">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_register"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_enter"
                        style="@style/ButtonBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:onClick="@{() -> login.onEnter()}"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/default_margin"
                        android:background="?selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:onClick="@{() -> login.onRegister()}"
                        android:padding="@dimen/margin_small"
                        android:text="@string/login_register"/>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </br.com.zup.multistatelayout.MultiStateLayout>
</layout>