<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="details"
            type="br.com.spm.viewmodel.DetailsSiteViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/relative_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/ic_back"
                android:onClick="@{() -> details.onBack()}"
                android:padding="@dimen/default_margin"
                app:srcCompat="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/bt_back"
                android:maxLines="1"
                android:paddingBottom="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/toolbar_size"/>

            <ImageButton
                android:id="@+id/bt_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/ic_menu"
                android:onClick="@{() -> details.onMenu()}"
                android:padding="@dimen/default_margin"
                app:srcCompat="@drawable/ic_menu"/>

        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_toolbar"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_large"
                    android:contentDescription="@string/ic_site"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/ic_site"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/image_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/details_site_url"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="@string/details_site_url"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/details_site_name"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="@string/details_site_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/details_site_email"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="@string/details_site_email"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/details_site_password"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            tools:text="@string/details_site_password"/>

                        <ImageButton
                            android:id="@+id/image_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/margin_large"
                            android:background="@android:color/transparent"
                            android:onClick="@{() -> details.onCopy()}"
                            app:srcCompat="@drawable/ic_copy"/>


                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>
</layout>